Sobre escrevi os codigos

--- a/header.css
+++ b/header.css
@@ -2,7 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
+  position: fixed;
+  top: 0;
+  width: 100vw;
 }
 
 .cabecalho__menu-hamburguer {
