sem fechar a HOME , inicio pg Studio Process

--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@ body {
 
 .banner {
   margin: 10em 1.5em 3em 1.5em;
+  display: flex;
+  flex-direction: column;
+}
+
+.verde {
+  color: var(--cor-verde);
 }
 
 .banner__titulo {
@@ -36,7 +42,6 @@ body {
   font-weight: 700;
   color: var(--cor-branco);
   padding: 0 1em;
-
   text-align: left;
   line-height: 1.5em;
   text-shadow: 4px 5px 10px rgba(0, 0, 0, 0.5);
@@ -67,10 +72,10 @@ body {
   text-decoration: none;
 }
 
-.container_arrow_e_whats {
+.container_whats {
   display: flex;
   justify-content: end;
-  margin-top: 4em;
+  margin-top: 10em;
 }
 
 /*.arrow {
@@ -188,7 +193,7 @@ body {
 
 .banner__subtitulo {
   font-family: var(--fonte-primaria);
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 500;
   color: var(--cor-branco);
   text-align: center;
@@ -236,4 +241,40 @@ body {
   font-size: 12px;
   padding: 1em;
   text-align: center;
+}
+
+/* COMO O STUDIO TRABALHA */
+
+.banner-studiotb {
+  margin: 10em 1.5em 3em 1.5em;
+  display: flex;
+  flex-direction: column;
+}
+
+.banner__subtitulo-studiotb {
+  font-family: var(--fonte-primaria);
+  font-size: 20px;
+  font-weight: 500;
+  color: var(--cor-branco);
+  text-align: center;
+  line-height: 1.5em;
+  padding: 1em;
+}
+
+.servicos-studiotb {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vw;
+}
+
+.servico_titulo {
+  font-family: var(--fonte-primaria);
+  font-size: 24px;
+  color: var(--cor-branco);
+  display: flex;
+  text-align: center;
+  line-height: 1.5em;
+  margin: 6em 2em 2em 2em;
 }
