--- a/studio_process.css
+++ b/studio_process.css
@@ -50,7 +50,7 @@
   color: var(--cor-branco);
   align-items: center;
   padding: 1em 0;
-  margin: 1em;
+  margin: 1em 1em 4em 1em;
 }
 
 .cards-briefing,
@@ -82,4 +82,34 @@
   padding: 0 1em 1em 1em;
   text-align: center;
   line-height: 1.5em;
+}
+
+/* BANNER FINAL */
+
+.banner_final-stdprocess {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.banner__titulo2-stdprocess {
+  font-family: var(--fonte-primaria);
+  font-size: 34px;
+  font-weight: 700;
+  color: var(--cor-branco);
+  padding: 0 1em;
+  margin: 2.5em 0 0 0;
+  text-align: center;
+  line-height: 1.5em;
+  text-shadow: 4px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.banner__subtitulo {
+  font-family: var(--fonte-primaria);
+  font-size: 20px;
+  font-weight: 500;
+  color: var(--cor-branco);
+  text-align: center;
+  line-height: 1.5em;
+  padding: 0 1em;
 }
