--- a/card_sanfona.css
+++ b/card_sanfona.css
@@ -1,11 +1,3 @@
-.servicos_card-titulo {
-  font-family: var(--fonte-primaria);
-  font-size: 24px;
-  font-weight: 500;
-  color: var(--cor-branco);
-  padding: 0.5em;
-}
-
 /**/
 
 .card {
@@ -94,6 +86,5 @@
 
 /**/
 
-.baner_final {
-  margin: 4em 0;
+@media screen and (min-width: 680px) {
 }
