--- a/animacao_peixe.css
+++ b/animacao_peixe.css
@@ -36,3 +36,27 @@
     transform: translate(-50%, -50%) rotate(360deg);
   }
 }
+
+@media screen and (min-width: 680px) {
+  .peixe {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%);
+  }
+
+  .texto_peixe {
+    width: 500px;
+    height: 500px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: rotate 20s infinite linear;
+  }
+}
