--- a/style.css
+++ b/style.css
@@ -282,4 +282,24 @@ body {
     margin: -1em 0em;
     font-size: 40px;
   }
+
+  .banner__titulo2 {
+    font-family: var(--fonte-primaria);
+    font-size: 60px;
+    font-weight: 700;
+    color: var(--cor-branco);
+    padding: 0 1em;
+    margin: 2.5em 0 0.5em 0;
+  }
+
+  .banner__subtitulo {
+    font-family: var(--fonte-primaria);
+    font-size: 40px;
+    font-weight: 500;
+    color: var(--cor-branco);
+    text-align: center;
+    line-height: 1.5em;
+    padding: 0 1em;
+    margin: 0 3em 1em 3em;
+  }
 }
