--- a/style.css
+++ b/style.css
@@ -156,7 +156,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .servico_titulo {
@@ -179,11 +178,11 @@ body {
 
 .banner__titulo2 {
   font-family: var(--fonte-primaria);
-  font-size: 34px;
+  font-size: 40px;
   font-weight: 700;
   color: var(--cor-branco);
   padding: 0 1em;
-  margin: 2.5em 0 0 0;
+  margin: 1em 0;
   text-align: left;
   line-height: 1.5em;
   text-shadow: 4px 5px 10px rgba(0, 0, 0, 0.5);
@@ -191,12 +190,13 @@ body {
 
 .banner__subtitulo {
   font-family: var(--fonte-primaria);
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 500;
   color: var(--cor-branco);
   text-align: center;
   line-height: 1.5em;
-  padding: 0 1em;
+  padding: ;
+  margin: 0 2em;
 }
 
 /*RODAPE*/
@@ -254,6 +254,17 @@ body {
     font-size: 60px;
   }
 
+  .banner__subtitulo {
+    font-family: var(--fonte-primaria);
+    font-size: 32px;
+    font-weight: 500;
+    color: var(--cor-branco);
+    text-align: center;
+    line-height: 1.5em;
+    padding: ;
+    margin: ;
+  }
+
   .botao__projeto {
     display: flex;
     width: 30vw;
@@ -283,13 +294,26 @@ body {
     font-size: 40px;
   }
 
+  /*SERVICOS*/
+
+  .servico_titulo {
+    font-family: var(--fonte-primaria);
+    font-size: 40px;
+    color: var(--cor-branco);
+    display: flex;
+    text-align: center;
+    line-height: 1.5em;
+    margin: ;
+  }
+
+  /*BANNER FINAL*/
+
   .banner__titulo2 {
     font-family: var(--fonte-primaria);
     font-size: 60px;
     font-weight: 700;
     color: var(--cor-branco);
-    padding: 0 1em;
-    margin: 2.5em 0 0.5em 0;
+    margin-bottom: 0.5em;
   }
 
   .banner__subtitulo {
@@ -299,7 +323,7 @@ body {
     color: var(--cor-branco);
     text-align: center;
     line-height: 1.5em;
-    padding: 0 1em;
-    margin: 0 3em 1em 3em;
+    padding: ;
+    margin: 0 2em;
   }
 }
